--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 header {
   background: #ffffff;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   margin-bottom: 30px;
   padding-bottom: 0;
@@ -91,16 +91,19 @@ textarea {
 }
 
 #headerContainer {
+  background-color: #ffffff;
   width: 960px;
   height: 90px;
   margin: 0 auto;
+  border-bottom: 3px solid;
+  border-color: #dddddd;
 }
 
 #contactContainer {
   width: 205px;
   margin-left: 20px;
   margin-right: 20px;
-  padding: 0  ;
+  padding: 0;
 }
 
 #nameTag {
@@ -137,18 +140,29 @@ textarea {
 }
 
 .footer {
+  width: 960px;
+  margin: 0 auto;
   background: #666666;
   font-size: 12px;
   color: #babcc1;
   height: 50px;
   line-height: 50px;
   text-align: center;
+  padding: 0;
+}
+
+.footerContainer {
+  width: 100%;
+  margin: 0;
+  background: #666666;
+  padding: 0;
   border-top: 8px solid;
   border-color: #4aaaa5;
 }
 
 .wrapper {
-  flex: 1 0 auto;}
+  flex: 1 0 auto;
+}
 
 .container {
   width: 960px;
